# poromat

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  EDA.py  README.md  env.yml  notebook_test.ipynb  pyproject.toml  readthedocs.yml
data/: combine.py  full_data.csv
data/raw/: Z_A.py  dense.csv
docs/: requirements.txt
docs/source/: conf.py  usage.md
evaluation/: interpolation_baseline.py  lightgbm_model.py  lopo_evaluator.py  main_lopo_evaluation.py  metalearning_model.py
models/bayesian_model/: bayes_mae.csv  bayes_model.pkl
models/denoise_adaboost/: baseline_mae_paras.csv
models/lightgbm_model/: lgb_mae_params.csv  lgb_model.pkl
notebooks/: BNN_demo.ipynb  baseline_interpolation.ipynb  bayes_demo.ipynb  lightgbm_demo.ipynb  meta_learning.ipynb
private_training/: train_ada_dt.py  train_bnn.py  train_lightgbm.py  train_meta.py
results/evaluations/: lopo_mae_20250518_201648.csv
results/models/: ada_dt_model.pkl  bnn_samples.pkl  bnn_scaler_X.pkl  bnn_scaler_y.pkl  lgb_model.pkl  meta_maml_model.pkl  meta_scaler_X.pkl  meta_scaler_y.pkl
results/para_error/: ada_dt_mae_params.csv  bnn_mae_params.csv  lgb_mae_params.csv  meta_mae_params.csv
src/poromat/: __init__.py  config.py
src/poromat/models/: bnn.py
src/poromat/pipeline/: generate_predictions.py
src/poromat/utils/: download.py  io.py  plot.py
tests/: input_test.py
