[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "poromat"
version = "0.1.0"
description = "Stress-strain prediction with porosity-aware models (BNN, LightGBM, Interpolation)"
authors = [
    {name = "Yun Zhou", email = "robbiezhou1@gmail.com"}
]
license = {file = "LICENSE.txt"}
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "lightgbm",
    "jax",
    "jaxlib",
    "numpyro",
    "joblib"
]

[tool.pytest.ini_options]
pythonpath = "src"

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
